--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ h2 {
   color: white;
   font-family: Montserrat;
   font-size: 24px;
-  text-transform: uppercase;
 }
 
 h3 {
@@ -117,6 +116,10 @@ h4 {
   font-size: 18px;
   padding-top:8px;
   margin-bottom: 90px;
+}
+
+.carousel-inner {
+  margin-top: 60px;
 }
 
 .iimage {
